// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlight tests should match snapshot with caption and image 1`] = `
<div
  className="Highlight-Highlight-0-1-1 Highlight-HighlightRotated-0-1-2"
  style={Object {}}
>
  <button
    className="Highlight-Pointer-0-1-3"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  />
  <div
    className="Highlight-CaptionHolder-0-1-4 Highlight-CaptionHolderActive-0-1-5"
  >
    <img
      alt=""
      src="https://www.fillmurray.com/300/200"
    />
    <p>
      Test caption
    </p>
  </div>
</div>
`;

exports[`Highlight tests should match snapshot with caption and without image 1`] = `
<div
  className="Highlight-Highlight-0-1-1 Highlight-HighlightRotated-0-1-2"
  style={Object {}}
>
  <button
    className="Highlight-Pointer-0-1-3"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  />
  <div
    className="Highlight-CaptionHolder-0-1-4 Highlight-CaptionHolderActive-0-1-5"
  >
    <p>
      Test caption
    </p>
  </div>
</div>
`;

exports[`Highlight tests should match snapshot with image and without caption 1`] = `
<div
  className="Highlight-Highlight-0-1-1 Highlight-HighlightRotated-0-1-2"
  style={Object {}}
>
  <button
    className="Highlight-Pointer-0-1-3"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  />
  <div
    className="Highlight-CaptionHolder-0-1-4 Highlight-CaptionHolderActive-0-1-5"
  >
    <img
      alt=""
      src="https://www.fillmurray.com/300/200"
    />
  </div>
</div>
`;

exports[`Highlight tests should match snapshot without image or caption 1`] = `
<div
  className="Highlight-Highlight-0-1-1 Highlight-HighlightRotated-0-1-2"
  style={Object {}}
>
  <button
    className="Highlight-Pointer-0-1-3"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  />
</div>
`;
